--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-ifs",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Web纯前端项目模板（bootstrap+angularjs）生成器",
   "author": "dinghx14714",
   "files": [
@@ -8,7 +8,10 @@
     "subgenerator"
   ],
   "keywords": [],
-  "repository": "huanxinding/generator-ifs",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/huanxinding/generator-ifs.git"
+  },
   "scripts": {},
   "dependencies": {},
   "devDependencies": {},
